--- a/Nextjs/nextjs-dashboard/package.json
+++ b/Nextjs/nextjs-dashboard/package.json
@@ -6,6 +6,7 @@
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
+    "lint": "next lint",
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "next": "^14.0.2",
+    "next-auth": "5.0.0-beta.19",
     "pg": "^8.11.5",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -25,7 +27,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.1",
-    "zod": "^3.22.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
